# perscon

./: .gitignore  Makefile  README  README.md  TODO.md  config.py  db.py  main.py  perscon.conf  perscon.py
android/: AndroidManifest.xml  README
android/res/layout/: main.xml
android/res/values/: strings.xml
android/src/uk/ac/cam/cl/ms705/LocationTracker/: AppUtils.java  LocationTracker.java  LocationTrackerService.java  ServiceUpdateUIListener.java
appengine/: README.md  app.yaml  app.yaml.in  cron.yaml.in  export_to_live.sh  import_to_dev.sh  index.yaml  location_csv.py  location_loader.py  models.py  perscon_log.py  prefs.py  secret.py  settings.py  sync_macos.py  twitter.py  urls.py  views.py  woeid.py
appengine/msdos/: log.py  models.py  perscon_log.py  prefs.py  urls.py  views.py
appengine/msdos/drivers/: android.py  cron.py  fmi.py  sync.py  twitter.py  urls.py
appengine/perscon/: log.py  models.py  passwd.py.in  urls.py  views.py
appengine/perscon/drivers/: __init__.py  android.py  crons.py  fmi.py  gcontacts.py  googledata.py  sync_macos.py  syncs.py  twitter.py  urls.py
appengine/perscon/support/: __init__.py  secret.py  woeid.py
appengine/scripts/: export_to_live.sh  import_from_live.sh  location_csv.py
appengine/static/: app.js  index.html
appengine/static/js/: app.js
appengine/static/js/ext/: Ext.ux.GMapPanel3.js
appengine/static/pages/: index.html
appengine/support/: oauth.py
appengine/templates/: map.html
perscon/: config.py  db.py  main.py  perscon.conf  perscon.conf.in  perscon.pem  perscon.py
plugins/: Makefile
plugins/Adium/: sync.py
plugins/GDocs/: sync.py
plugins/Keychain/: keychain.conf.in  sync.py
plugins/MacOS-AddressBook/: AddressBook_util.py  sync.py
plugins/MacOS-SyncServices/: PersCon.plist  sync.py
plugins/PhotoFiles/: sync.py
plugins/Picasa/: sync.py
plugins/Skype/: skrype.py  sync.py
plugins/Twitter/: sync.py
plugins/iPhone/: manifest.py  parse_db.py  sync.sh
plugins/iPhoto/: sync.py
scripts/: set_passphrase.sh
server/: .gitignore  Makefile.in  TODO  aclocal.m4  config.ml  config.mli  configure  configure.ac
server/data/htdocs/: test.txt
server/lib/: Makefile
server/lib/password/: Makefile  password.ml
server/lib/platform/: Makefile  platform_generic.ml  platform_macos.ml  platform_macos_test.ml
server/lib/schema/: Makefile  schema.ml
server/lib_test/: Makefile
server/lib_test/platform/: Makefile  test.ml  test_macos.ml
server/plugins/IMAP/: offlineimap
server/plugins/MacOS-AddressBook/: sync.py
server/plugins/MacOS-SyncServices/: PersCon.plist  sync.py
server/plugins/iPhone/: manifest.py  parse_db.py  sync.sh
server/plugins/support/: Perscon_utils.py  build.sh
server/scripts/: get_passphrase.sh
server/src/: Makefile  config.ml  config.mli  crypto.ml  db.ml  db.mli  dispatch.ml  log.ml  log.mli  perscon.conf.in  perscon.ml  pop3_daemon.ml  pop3_protocol.ml  render.ml  schema.ml  tcp_server.ml  tcp_server.mli
support/: Makefile  Perscon_config.py.in  Perscon_utils.py  build.sh
ui/: Buildfile  README
ui/apps/perscon/: core.js  main.js
ui/apps/perscon/controllers/: app.js  prefs.js
ui/apps/perscon/fixtures/: prefs.js
ui/apps/perscon/models/: prefs.js
ui/apps/perscon/resources/: layout.css  main_page.js
ui/apps/perscon/tests/controllers/: app.js  prefs.js
ui/apps/perscon/tests/models/: prefs.js
